# geom3d

./: .gitignore  Cargo.toml  LICENSE  README.md
assets/: teapot.bpt
examples/: bezier.rs  bspline.rs  convert_stp.rs  nurbs.rs
src/: basis.rs  curve.rs  face.rs  knot.rs  lib.rs  mesh.rs  model.rs  points.rs  surface.rs  utils.rs
src/curve/: bezier.rs  bspline.rs  circle.rs  line.rs  polyline.rs
src/model/: step_reader.rs
src/surface/: bezier.rs  bspline.rs  cylinder.rs  plane.rs  spin.rs  sweep.rs  trim.rs  umbrella.rs
src/utils/: meshgen.rs  point.rs  polygon.rs
