[package]
authors = ["Junfeng Liu <china.liujunfeng@gmail.com>"]
categories = ["graphics", "cad"]
description = "Data structures and algorithms for 3D geometric modeling."
edition = "2018"
license = "MIT"
name = "geom3d"
repository = "https://github.com/J-F-Liu/geom3d"
version = "0.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.14.0"
