[package]
authors = ["Junfeng Liu <china.liujunfeng@gmail.com>"]
categories = ["graphics", "cad"]
description = "Data structures and algorithms for 3D geometric modeling."
edition = "2018"
license = "MIT"
name = "geom3d"
repository = "https://github.com/J-F-Liu/geom3d"
version = "0.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.4.0"
downcast-rs = "1.2.0"
glam = "0.14.0"
grid = "0.3.0"

iso-10303 = "0.5.0"
iso-10303-parts = "0.5.0"
svg = "0.9.2"
